# tarasysdash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEV_SETUP.md  Makefile  README.md  debug_auth.go  go.mod  go.sum  run-agent-remote.sh  run_local.sh  tara.db  tara.db-shm  tara.db-wal
.agent/: .toolkitignore  (+11 more)
.agent/workflows/automation/: AGENT_OS_INTEGRATION.md  AIDER_FIX.md  COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  MERGE_COMPLETE.md  PATH_DETECTION_FIX.md  QUICKSTART.md  README.md  README_SUPERVISOR.md  RESTORATION_STATUS.md  SYSTEM_COMPLETE.md  approval_policy.md  audit_integration.py  demo_approval.py  hello_agent.py  implementation_plan.md  init2.md  loop_controller.md  monitor_thought.py  pyproject.toml  secret_knowledge.txt  supervisor_cli.py  supervisor_protocol.md  test_mechanism.py  test_rag.py  verify_context.py  verify_db_schema.py  verify_indexer.py  verify_librarian_full.py  verify_retrieval.py
.agent/workflows/automation/docs/: blog_post_draft.md  continue_config_reference.json  manual_basic_id.md  manual_geek_en.md  ollama_connect_config.json  vscode_optimization_guide.md  vscode_performance_settings.json
.agent/workflows/automation/docs/dev/: walkthrough.md
.agent/workflows/automation/future/: dev_agent_cli.py  verify_agent_full.py  verify_brain.py  verify_executor.py  verify_tools.py
.agent/workflows/automation/scripts/: ask_librarian.py  clean_workspace.py  execute_sprint.py  execute_sprint_manual.py  index_codebase.py  marathon.py  self_heal.py
.agent/workflows/automation/tests/: test_supervisor.py
(+243 files in other folders)
